@@ -4,6 +4,9 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
+- Mark maintenance jobs as SUCCESS (but don't run the script) is `applicable`
+  returns with exit code 1 (#16413).
+
 - Fix bug which could leave pgp_num permanntly lower than pg_num (#16711).
 
 - Refactor maintenance: introduce global prepare/finish scripts that
